--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,3 +1,36 @@
+<div id="newsletter-signup">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <h3>Receive News & Offers from Tailormade Africa</h3>
+      </div>
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+          <div id="mc_embed_signup">
+            <form action="https://tailormadeafrica.us12.list-manage.com/subscribe/post?u=491ef6008d7bbb6987ce4ea3d&amp;id=16b6d8760e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  <div class="col-xs-12 col-md-7">
+              <div id="mc_embed_signup_scroll">
+                <div class="mc-field-group">
+                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email address*">
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+              </div>
+  </div>
+  <div class="col-xs-12 col-md-2">
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_491ef6008d7bbb6987ce4ea3d_16b6d8760e" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn-custom"></div>
+              </div>
+            </form>
+          </div>
+          <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+      </div>
+      
+      
+    </div>
+  </div>
+</div>
 <div class="contact" id="contact_area">
   <div class="container">
     <div class="row">
@@ -88,37 +121,37 @@
 </div>
 
 
-<% face = copywriting('Facebook', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
-<% twit = copywriting('Twitter', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
-<% ins = copywriting('Instagram', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>
+<!--<%# face = copywriting('Facebook', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>-->
+<!--<%# twit = copywriting('Twitter', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>-->
+<!--<%# ins = copywriting('Instagram', {:phrase_type => 'string', :scope => 'Social', :default => '#' }) %>-->
 
-<div class="social">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <ul class="list list-inline">
-          <li><a href="<%= face %>" target="_blank"><img alt="facebook" src="/assets/facebook.gif"></a></li>
-          <li><a href="<%= twit %>" target="_blank"><img alt="twitter" src="/assets/twitter.gif"></a></li>
-          <li><a href="<%= ins %>" target="_blank"><img alt="instagram" src="/assets/instagram.gif"></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
+<!--<div class="social">-->
+<!--  <div class="container">-->
+<!--    <div class="row">-->
+<!--      <div class="col-xs-12">-->
+<!--        <ul class="list list-inline">-->
+<!--          <li><a href="<%#= face %>" target="_blank"><img alt="facebook" src="/assets/facebook.gif"></a></li>-->
+<!--          <li><a href="<%#= twit %>" target="_blank"><img alt="twitter" src="/assets/twitter.gif"></a></li>-->
+<!--          <li><a href="<%#= ins %>" target="_blank"><img alt="instagram" src="/assets/instagram.gif"></a></li>-->
+<!--        </ul>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 
 <div class="footer">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <%= render(:partial => "/refinery/menu", :locals => {
+        <%#= render(:partial => "/refinery/menu", :locals => {
             :dom_id => 'list list-inline hidden-xs',
             :css => 'list list-inline hidden-xs'
         }) %>
-        <img alt="logo" src="/assets/bottom-logo.gif" class="logo">
-        <a href="https://www.caa.co.uk/atol-protection/" target="_blank" class="hidden-xs"><img alt="atol" src="/assets/atol.gif"></a>
+        <img alt="logo" src="/assets/TMA-logo-grey.gif" class="logo">
+        <!--<div class="hidden-xs"><img alt="atol" src="/assets/atol.gif"></div>-->
         <div class="copyright">
-          © Tailormade Africa &bull; All Rights Reserved &bull; <a href="http://www.perfectcircle.co.za" target="_blank">Website by Perfect Circle.</a><br/>
-          <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a> &bull; <a href="/privacy-policy">Privacy Policy</a>
+          © Tailormade Africa &bull; All Rights Reserved &bull; <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/privacy-policy">Privacy Policy</a><br/>
+          <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a>
         </div>
       </div>
     </div>
