--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -151,6 +151,26 @@ strong {font-weight:600;}
   .btn-custom,.btn-custom:hover {@include button (); margin:10px 0 20px 0;}
 }
 
+ #reviews {background:#fca33b url(/assets/bg-testimonials.jpg) 0 -130px no-repeat; height:555px; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
+   .lhs {padding-top:130px;
+     h1,p {text-align:left; color:#ffffff;}
+     h1 {font-weight:600; font-size:50px;}
+     .btn-custom {height: 50px; line-height: 50px; color: #ffffff;
+    background: transparent;
+    border: 1px solid #ffffff;
+    margin-top: 20px;
+    font-size: 14px;
+    padding: 0 50px;
+    border-radius: 100px;
+    font-weight: 400;}
+   }
+   .rhs {background: rgba(255, 255, 255, 0.8) !important; padding: 0 30px; margin:65px 0px;
+     h2 {line-height:32px; margin:30px 0 25px 0;}
+   }
+   .bx-wrapper .bx-viewport {background:transparent;}
+   .bx-pager {width:100%; text-align:center;}
+ }
+
   .safari-type,.experience {text-align:center; background:#f4f4f4; padding:50px 0;
     h1 {margin:0 0 10px 0;}
     .controls {width:100%;
