--- a/app/views/refinery/inquiries/admin/inquiries/show.html.erb
+++ b/app/views/refinery/inquiries/admin/inquiries/show.html.erb
@@ -119,6 +119,14 @@
     </tr>
     <tr>
       <td>
+        <strong>Hear</strong>
+      </td>
+      <td>
+        <%=  @inquiry.hear %>
+      </td>
+    </tr>
+    <tr>
+      <td>
         <strong><%= t('.date') %></strong>
       </td>
       <td>
