--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -816,3 +816,86 @@ strong {font-weight:600;}
 @media (min-width: 1200px) {
   .container {width: 1170px;}
 }
+
+
+
+
+/****NEWSLETTER****/
+
+.newsletter_list {background:#F4F4F4; padding:50px 0 30px 0; margin-top:20px;
+  h1 {margin:0 0 40px 0; text-align:center;}
+  .newsletter_post_pod {margin:0 auto 20px auto; border-bottom:1px solid #b7b7b7;position: relative;
+    .caption {padding:15px; text-align:left; background:#ffffff;
+      .title {font-size:16px; margin:0 0 10px 0; height:50px; overflow:hidden;
+        a {color:$color;}
+      }
+      .date {font-size:12px; float:left;}
+      .comment {font-size:12px; float:right;
+        a {color:$color;
+          .fa {margin-right:5px;}
+        }
+      }
+    }
+    .video_play{background: url("/assets/playbtn2.png") no-repeat; width: 60px;  height: 60px; position: absolute; top: 36%; margin: -30px 0 0 -30px; z-index: 30; left: 50%; }
+  }
+}
+
+.newsletter_show {padding:0 0 50px 0;
+  h1 {margin-left:15px;}
+  #newsletter_post {
+    h1,h2 {margin-left:0; font-size:20px; line-height:28px; margin:30px 0 20px 0;}
+    img {margin:0 auto 30px auto;}
+    .share {padding:10px 0;}
+    .stButton {width:83px!important;
+      .twitter { background-image: url(/assets/tweet.gif)!important; width:83px!important; height:30px!important;}
+      .facebook { background-image: url(/assets/facebook2.gif)!important; width:83px!important; height:30px!important;}
+      .pinterest { background-image: url(/assets/pinit.gif)!important; width:83px!important; height:30px!important;}
+      .linkedin { background-image: url(/assets/linkedin.gif)!important; width:83px!important; height:30px!important;}
+    }
+  }
+  .newsletter-comment {
+    .details {font-size:10px; text-align:left; 
+      span { color:#000000;}
+    }
+  }
+  #comments{
+    input {padding:0 20px; margin-bottom:5px; border: 0;  width:100%; height:44px; border:1px solid #e7e7e7;}
+    textarea {padding:10px 20px; border: 0;  width:100%; border:1px solid #e7e7e7;}
+    .captcha {background: url(/assets/captcha-lg.png) top center no-repeat; height:60px; margin:-5px 0 5px 0;}
+    .form-actions {background:none; border-top:none; padding:0;}
+    .form-actions input {background:$color; border-radius: 0; border: 0; height: 44px; width: 200px; color: #fff;}
+  }
+  .newsletter_rhs {
+    h2 {margin:0 0 20px 0;}
+    .search-item {margin: 0 0 5px 0; border: 1px solid #e7e7e7; padding:10px; height:102px; width:100%;background:#f1f1f1;
+      h1,h2 {display:none;}  
+      img {margin-right:10px; float:left;}
+      .search-item-body {float:left; width:65%;
+        h3 {margin:0; width: 220px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; line-height:30px; font-size:16px; text-align:left;
+          a {color:$color;}
+        }
+        .description {height:40px; overflow:hidden; font-size: 12px; line-height: 20px; margin-bottom:0;color:#282629;
+            ul {list-style:none; margin-left:-40px;}
+            p,a,li,h1,h1,h3 {color:#282629;}
+        }
+      }
+    }
+    .search-item:hover {background:#e7e7e7; @include animate ();cursor:pointer;}
+  }
+}
+
+.more {border: 1px solid #aaa; width: 80%; margin: 20px 10% 0 10%; padding:20px; text-align:left;
+  h3 {margin:0 0 5px 0; font-weight:400;}
+}
+
+.morecontent span {
+    display: none;
+}
+
+.best {text-align: center; background: #f4f4f4;
+  ul {margin:0;}
+}
+.top {padding: 20px 0 0 0!important;}
+.bottom {padding:40px 0!important;
+  h1 {margin:0 0 30px 0!important;}
+}
