--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -7,14 +7,14 @@
             <div class="container">
               <div class="row">
                 <div class="col-xs-12 hidden-sm col-md-4">
-                  <% if item.country_image.present %>
-                    <%= image_fu(item.country_image, "519x168#c", :alt => item.country_image.alt_tag, class: "img-responsive") %>
-                  <% elsif item.parent.country_image.present? %>
-                    <%= image_fu(item.parent.country_image, "519x168#c", :alt => item.parent.country_image.alt_tag, class: "img-responsive") %>
+                  <% if @location.country_image.present? %>
+                    <%= image_fu(@location.country_image, "519x168#c", :alt => @location.country_image.alt_tag, class: "img-responsive") %>
+                  <% elsif @location.parent.present? and @location.parent.country_image.present? %>
+                    <%= image_fu(@location.parent.country_image, "519x168#c", :alt => @location.parent.country_image.alt_tag, class: "img-responsive") %>
                   <% end %>
                 </div>
                 <div class="col-xs-12 hidden-sm col-md-8">
-                  <p><%=raw item.side_body if item.side_body.present? %></p>
+                  <p><%=raw @location.side_body if @location.side_body.present? %></p>
                   <a href="#contact_area" class="arrow">Enquire Now</a>
                 </div>
               </div>
@@ -38,7 +38,7 @@
                   <img src="/assets/main-logo.png" class="img-responsive">
                 </div>
                 <div class="col-xs-12 hidden-sm col-md-8">
-                  <p><%=raw item.side_body if item.side_body.present? %></p>
+                  <p><%=raw @accommodation.side_body if @accommodation.side_body.present? %></p>
                   <a href="#contact_area" class="arrow">Enquire Now</a>
                 </div>
               </div>
@@ -62,7 +62,7 @@
                   <img src="/assets/main-logo.png" class="img-responsive">
                 </div>
                 <div class="col-xs-12 hidden-sm col-md-8">
-                  <p><%=raw item.side_body if item.side_body.present? %></p>
+                  <p><%=raw @activity.side_body if @activity.side_body.present? %></p>
                   <a href="#contact_area" class="arrow">Enquire Now</a>
                 </div>
               </div>
