--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -29,7 +29,7 @@
       }) %>
     </div>
     
-		<div class="search">
+		<div class="searchContainer">
 			<button id="btn-search-close" class="btn--search-close" aria-label="Close search form"><img src="/assets/close.png"></button>
 			<form accept-charset="UTF-8" action="/locations" method="get" class="search__form">
 				<input class="search__input" name="search" type="search" placeholder="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
