--- a/app/assets/stylesheets/search.css
+++ b/app/assets/stylesheets/search.css
@@ -1,7 +1,7 @@
 /* Layout for search container */
-.btn--search {border:0; background:transparent; line-height:90px; padding:0!importantimportant;}
-.search {display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: rgba(0, 0, 0, 0.65);}
-.js .search {position: fixed; z-index: 1000; top: 0; left: 0; width: 100%; height: 100vh;	pointer-events: none; opacity: 0; transition: opacity 0.5s;}
+.btn--search {border:0; background:transparent; line-height:90px; padding:0!important;}
+.searchContainer {display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: rgba(0, 0, 0, 0.65);}
+.js .searchContainer {position: fixed; z-index: 1000; top: 0; left: 0; width: 100%; height: 100vh;	pointer-events: none; opacity: 0; transition: opacity 0.5s;}
 .js .search--open {pointer-events: auto; opacity: 1;}
 .btn--search-close {position: absolute; top: 2em; right: 1.25em; display: none; border:0; background:transparent;}
 .js .btn--search-close {display: block;}
