--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -376,12 +376,7 @@
                               <div class="col-xs-12 col-sm-6">
                                 <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
                               </div>
-                              <div class="col-xs-12 col-sm-6">
-                                <div class="captcha"></div>
-                              </div>
-                              <div class="col-xs-12 col-sm-6">
-                                <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
-                              </div>
+                             <%= recaptcha_action('inquire') %>
                               <div class="col-xs-12">
                                 <%= f.submit 'Submit', :class=>"btn btn-default btn-custom", :data => {:disable_with => "Saving..."} %>
                               </div>
