--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -222,10 +222,10 @@ strong {font-weight:600;}
 
 .master-slider {text-align:center;
   .overlay {position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 5; background: url(../assets/overlay.png) repeat;}
-  .banner-strip {background:rgba(0,0,0,0.65); padding:15px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
+  .banner-strip {background:rgba(0,0,0,0.8); padding:15px 0; position:absolute; width:100%; bottom:0; z-index:2000; text-align:left; color:#ffffff;
     .img-responsive {max-width:100%!important;}
     p {font-weight:300; text-align:justify; margin:0 0 15px 0;}
-    a {height: 50px; line-height: 50px; color: #ffffff; background: transparent; border: 1px solid #ffffff; font-size: 14px; padding: 0 50px; border-radius: 100px; font-weight: 400; display:inline-block;}
+    a {height: 50px; line-height: 50px; color: #ffffff; background: #fb6733; font-size: 14px; padding: 0 50px; border-radius: 100px; font-weight: 400; display:inline-block;}
 
   }
   .ms-nav-prev {background:url(../assets/banner-arrow-left.png) no-repeat!important; height:74px; left:15px; width:37px;}
@@ -687,6 +687,7 @@ strong {font-weight:600;}
 /*** xs ***/
 
 @media (max-width:767px) {
+  .instagram-feed {display:none;}
   #reviews {background:#f4f4f4 url(/assets/bg-testimonials.jpg) 0 0 no-repeat; text-align:center;}
   #reviews .rhs {display:none;}
     #reviews .lhs h1 {margin-top:10px; text-align:center;}
